--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,3 @@
 [theme]
-primaryColor="#2E6EB1"
+primaryColor="purple"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#2E6EB1"
-font="sans serif"
